[package]
name = "tree-todo"
version = "0.1.0"
authors = ["yit6 <thatsjustwyatt@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", features = ["crossterm"] }
crossterm = "0.19"
chrono = "0.4"
